# zadanie_contelizer

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py
pesel_validator/: forms.py  tests.py  urls.py  utils.py  views.py
pesel_validator/templates/pesel_validator/: home.html
text_processing/: forms.py  tests.py  urls.py  utils.py  views.py
text_processing/templates/text_processing/: home.html  result.html
